# nlp-learning

./: .gitignore  4-deep_learning_for_nlp.ipynb  pyproject.toml
book/: _config.yml  _toc.yml
book/_build/.doctrees/: environment.pickle  intro.doctree
book/_build/.doctrees/basic/: Encoder_Decoder_and_Evaluation_Methods.doctree  Hugging_Face_Transformer_Tutorial.doctree  Logistic_Regression.doctree  Logistic_Regression_for_Text_Classification.doctree  NLP_Applications_and_Neural_Network_Architectures.doctree  Neural_Networks_and_Deep_Learning_Practice.doctree  Neural_Networks_for_Text_Classification.doctree  Perceptron_and_Text_Classification.doctree  Recurrent_Neural_Networks_Principles.doctree  Text_Classification_with_Word_Embeddings.doctree  Transformer_and_Contextualized_Embedding.doctree
book/_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  search.html  searchindex.js
book/_build/html/basic/: Encoder_Decoder_and_Evaluation_Methods.html  Hugging_Face_Transformer_Tutorial.html  Logistic_Regression.html  Logistic_Regression_for_Text_Classification.html  NLP_Applications_and_Neural_Network_Architectures.html  Neural_Networks_and_Deep_Learning_Practice.html  Neural_Networks_for_Text_Classification.html  (+4 more)
book/basic/: Encoder_Decoder_and_Evaluation_Methods.ipynb  Logistic_Regression_for_Text_Classification.ipynb  Neural_Networks_and_Deep_Learning_Practice.ipynb  Recurrent_Neural_Networks_Principles.ipynb  Text_Classification_with_Word_Embeddings.ipynb
temp/: 2-topic_modeling.ipynb  3-sentiment_classification_old_fashioned_way.ipynb
(+17 files in other folders)
