[project]
name = "nlp-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataset>=1.6.2",
    "fastai==1.0",
    "fbpca>=1.0",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.4.post1",
    "kagglehub>=0.3.8",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
    "transformers>=4.49.0",
]
